[gd_scene load_steps=2 format=3 uid="uid://cfna7o6hjnrrg"]

[ext_resource type="Script" uid="uid://cfikj2tu5dp8e" path="res://common/grapple_area.gd" id="1_4uutx"]

[node name="GrappleArea" type="Area2D"]
collision_layer = 2
collision_mask = 2
monitorable = false
script = ExtResource("1_4uutx")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
